registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: registry
  name: registry
  namespace: registry
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    k8s-app: registry
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
